("GET","POST", "PUT", "DELETE", "OPTIONS") funcionando